bashaw update WIP

--- a/child_pages/cc-elections/Candidates/bashaw.html
+++ b/child_pages/cc-elections/Candidates/bashaw.html
@@ -191,23 +191,40 @@
                     <li>
                         <ol>
                             <li>
-                            Wants to secure the border while revamping legal immigration policy. Cites a 
-                            <a href="https://www.njassemblygop.com/DocumentCenter/View/522/nj-illegal-immigration-costs-2024-PDF?bidId=">study</a> that suggests illegal immigration 
-                            is costing New Jersey $7.3 billion per year ($2100 per household) while 
-                            <a href="https://clerk.house.gov/Votes/2024215">Andy Kim voted against</a> the 
-                            <a href="https://www.congress.gov/bill/118th-congress/house-bill/8146/text">Police Our Borders Act</a>
+                                Wants to secure the border while revamping legal immigration policy. Cites a 
+                                <a href="https://www.njassemblygop.com/DocumentCenter/View/522/nj-illegal-immigration-costs-2024-PDF?bidId=">study</a> that suggests illegal immigration 
+                                is costing New Jersey $7.3 billion per year ($2100 per household) while 
+                                <a href="https://clerk.house.gov/Votes/2024215">Andy Kim voted against</a> the 
+                                <a href="https://www.congress.gov/bill/118th-congress/house-bill/8146/text">Police Our Borders Act</a>
                             </li>
-
+                            <br>
+                            <li>
+                                Wants to pursue and invest in emerging energy technologies while also striving for energy independence and protecting our environment. Costs and harm 
+                                from projects like electrification, EVs, and off-shore wind can be abated as we pragmatically plan for the future.
+                            </li>
+                            <br>
+                            <li>
+                                
+                            </li>
                             <li>Wants to end sanctuary state status in NJ</li>
+                            <br>
                             <li>He believes in protecting parents rights in schools</li>
+                            <br>
                             <li>He believes SALT (state and local taxes) rates are lopsided in NJ</li>
+                            <br>
                             <li>Wants to stop the current chaos that's occurring on college campuses.</li>
+                            <br>
                             <li>He wants to address inflation issues that affect every day people rather than relying on cherry-picking 
                                 economic data that make the economy look good.</li>
+                                <br>
                                 <li>He wants to stop the cycle of printing and borrowing money.</li>
+                                <br>
                                 <li>He is against the offshore windmill plan because it would increase utility costs.</li>
+                                <br>
                                 <li>He is against secular indoctrination at schools.</li>
+                                <br>
                                 <li>He believes in school choice.</li>
+                                <br>
                                 <li>He wants to ensure we secure our border while helping allies overseas.</li>
                         </ol>
                     </li>
