wording change bashaw page

--- a/child_pages/cc-elections/Candidates/bashaw.html
+++ b/child_pages/cc-elections/Candidates/bashaw.html
@@ -269,7 +269,7 @@
 
             <h4 class="sub-heading">experience</h4>
             <div class="experience can-sec">
-              While Mr. Bashaw may not have been directly involved in up to this point, he has been around politics his whole life. 
+              While Mr. Bashaw may not have been directly involved in politics up to this point, he has been around politics his whole life. 
               His grandfather had a political radio show that the government shut down, and so his grandfather rented a boat to 
               take his show off the coast and out of the jurisdiction so he could continue to broadcast. His grandfather also had 
               a strong conviction that political discussions ought to be based in listening and persuasion rather than telling people
