mcquade is apparently a republican fix

--- a/child_pages/cc-elections/millville_commissioners_2024.html
+++ b/child_pages/cc-elections/millville_commissioners_2024.html
@@ -101,8 +101,8 @@
             in soon, including one interview with the current vice-mayor about the current issues in Millville, and potentially a similar interview with the 
             mayor soon to come. As of now, our 
             basic understanding is that Marissa Ranello's seat is open for election, with her running for re-election and three challengers. Robert Mcquade is 
-            one challenger who has years of experience on the school board and about one year of experience on the commissioner's board, he has sent us some 
-            prelimnary information about his campaign, and he plans to send us more information soon. Another challenger, Maria Darminio, is a popular 
+            one challenger who has years of experience on the school board and about one year of experience on the commissioner's board, and you can check out 
+            his page for lengthy information and live interviews. Another challenger, Maria Darminio, is a popular 
             bartender at a local bar, OVT, and she plans to send us information soon. Carole Cossaboon has a bit of a presence on her facebook campaign group 
             and has recently given us information which you can see on her page. All in all, assuming everyone follows up on sending over information, you will 
             have an informed choice. Until then, stay tuned.
@@ -246,75 +246,6 @@
                 </div> 
         </div>
 
-        <div class="sb-top-box"> 
-                <h4>Democrat</h4>
-                <h6>Democrata</h6>  
-            </div>
-
-        <div id="democratic-candidates">
-            <div class="table-titles" id="only-three">
-                <div class="title">
-                    <p class="title-big">OFFICE TITLE</p>
-                    <p class="title-small">TITULO OFICIAL</p>
-                </div>
-                <div class="title">
-                    <p class="title-letter">A</p>
-                    <p class="title-party">Democratic</p>
-                    <p class="title-party-espanol">Democrata</p>
-                </div>
-                <div class="title">
-                    <p class="title-party-pc">PERSONAL CHOICE</p>
-                    <p class="title-party-espanol">SELECCION PERSONAL</p>
-                </div>
-                <div class="title millville-no-left-border"></div>
-            </div>
-
-            
-
-            <div class="row" id="only-three">
-                    <div class="office-title">
-                        <div class="ot-english">
-                            <p>Millville City Commissioners</p>
-                            <p>Vote for One</p>
-                        </div>
-                        <div class="ot-espanol">
-                            <p>Junta Comisionados del Empleados</p>
-                            <p>Vota por Uno</p>
-                        </div>
-                    </div>
-                    <div class="a">
-                        <div class="a-row-1">
-                            <div class="org">
-                                <p>Democrat</p> 
-                            </div>
-                            <div class="first-name">
-                                <a href="Candidates/mcquade.html">Robert</a>
-                            </div>
-                            <div class="number-a-and-circle"> 
-                                <p>2J</p>
-                                <p>0</p>
-                            </div>   
-                        </div>
-                        <div class="a-row-2">
-                            <div class="last-name push-down-last-name">
-                                <a href="Candidates/mcquade.html">McQuade</a>
-                            </div>
-                        </div>
-                        <div class="a-row-3">
-                            <div class="slogan">
-                                <p>The People's Commissioner</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="personal-choice-millville">
-                        <div class='pc-col-1'>
-                            <p class="pc-line-1">Personal Choice</p>
-                            <p class="pc-line-2">Seleccion Personal</p>
-                        </div>
-                        <div class="pc-col-2">0</div>
-                    </div>
-                </div> 
-        </div>
         
             <div class="sb-top-box"> 
                 <h4>REPUBLICAN</h4>
@@ -337,6 +268,50 @@
                         <p class="title-party-espanol">SELECCION PERSONAL</p>
                     </div>
                     <div class="title millville-no-left-border"></div>
+                </div>
+
+                <div class="row" id="only-three">
+                    <div class="office-title">
+                        <div class="ot-english">
+                            <p>Millville City Commissioners</p>
+                            <p>Vote for One</p>
+                        </div>
+                        <div class="ot-espanol">
+                            <p>Junta Comisionados del Empleados</p>
+                            <p>Vota por Uno</p>
+                        </div>
+                    </div>
+                    <div class="a">
+                        <div class="a-row-1">
+                            <div class="org">
+                                <p>Republican</p> 
+                            </div>
+                            <div class="first-name">
+                                <a href="Candidates/mcquade.html">Robert</a>
+                            </div>
+                            <div class="number-a-and-circle"> 
+                                <p>3J</p>
+                                <p>0</p>
+                            </div>   
+                        </div>
+                        <div class="a-row-2">
+                            <div class="last-name push-down-last-name">
+                                <a href="Candidates/mcquade.html">Mcquade</a>
+                            </div>
+                        </div>
+                        <div class="a-row-3">
+                            <div class="slogan">
+                                <p>The People's Commissioner</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="personal-choice-millville">
+                        <div class='pc-col-1'>
+                            <p class="pc-line-1">Personal Choice</p>
+                            <p class="pc-line-2">Seleccion Personal</p>
+                        </div>
+                        <div class="pc-col-2">0</div>
+                    </div>
                 </div>
 
                 <div class="row" id="only-three">
