--- a/child_pages/cc-elections/Candidates/driver.html
+++ b/child_pages/cc-elections/Candidates/driver.html
@@ -109,7 +109,7 @@
 
 <div class="container">
     <div class="title-info">
-        <h2>CURTIS BASHAW</h2>
+        <h2>Jessica N. Driver</h2>
          <div class="running-for">
              <div class="running-title">Running for: </div>
              <div class="position">US Senate</div>
@@ -123,22 +123,22 @@
          <img class="cover" src="../../../assets/candidates/driver.jpg" class="candidate-pic">
          <div class="candidate-pic-box-content">
              <h4 class="sub-heading">Websites</h4>
-                  
+                  <p>Candidate Driver wishes to keep her online presence private</p>
                 
              <button class="quick-summary-reopen">quick summary</button>
              <div class="election-date">
                  <p>This election is on November 5th, 2024</p>
              </div>
              <div class="animal-box">
-                 <img src="../../../assets/candidates/democrat.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/democrat.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/democrat.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/democrat.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/democrat.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/democrat.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/democrat.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/democrat.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/democrat.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
              </div>
          </div>
      </div>
@@ -151,6 +151,7 @@
                 <ul>
                     <li>Safety and Security of every student regardless of race, gender, creed, or faith. The school is meant to be a hub of the public and can only be if all of 
                     the public is welcomed. </li>
+                    <br>
                     <li>Fighting for transparency between admin, staff & the community</li>
                 </ul>                    
             </div>
@@ -162,10 +163,15 @@
             <div class="experience can-sec">
                 <ul>
                     <li>Current Commerical Township School Board Member for three and a half years</li>
+                    <br>
                     <li>Many years experience as a special education teacher, primarily with preschool students</li>
+                    <br>
                     <li>Highly involved parent and volunteer in the school system, with 3 children in the school system</li>
+                    <br>
                     <li>Served on committees for introducing new curriculum standards, dress code, and discipline</li>
+                    <br>
                     <li>PTA secretary for a few years</li>
+                    <br>
                     <li>Policy and Curriculum Committee Chair</li>
                 </ul>
             </div>
@@ -177,6 +183,7 @@
             <div class="experience can-sec">
                 <ul>
                     <li>Voted against termination of staff members</li>
+                    <br>
                     <li>Voted yes to the sale of PNS</li>
                 </ul>
             </div>
