--- a/child_pages/cc-elections/Candidates/driver.html
+++ b/child_pages/cc-elections/Candidates/driver.html
@@ -95,7 +95,7 @@
               <h6 class="page-title">Jessica N. Driver</h6>
               <p>
                 Candidate Driver has been a Commercial Township School Board member for the past 3 and a half years with other relevant credentials such as having kids in the 
-                school system, being an active parent and volunteer in the school system, years of teaching experience as a special education teacher, served on various school 
+                school system, being an active parent and volunteer in the school system, years of teaching experience as a special education paraeducator, served on various school 
                 committees and sometimes being committee chair, and PTA secretary for a few years. Her main agenda items are to provide a safe environment for all school 
                 children and to provide transparency throughout the school system for the community. She has voted against the termination of staff members and voted yes for the 
                 sale of the PNS system. We are planning an interview with candidate Driver to help clarify some of the information she provided and to dive deeper into some of 
@@ -112,7 +112,7 @@
         <h2>Jessica N. Driver</h2>
          <div class="running-for">
              <div class="running-title">Running for: </div>
-             <div class="position">US Senate</div>
+             <div class="position">Commercial Township School Board</div>
          </div>
          <div class="incum-or-challenger">
              <div class="incumbent active">Incumbent</div>
@@ -164,7 +164,7 @@
                 <ul>
                     <li>Current Commerical Township School Board Member for three and a half years</li>
                     <br>
-                    <li>Many years experience as a special education teacher, primarily with preschool students</li>
+                    <li>Many years experience as a special education paraeducator, primarily with preschool students</li>
                     <br>
                     <li>Highly involved parent and volunteer in the school system, with 3 children in the school system</li>
                     <br>
