candidate driver update

--- a/child_pages/cc-elections/Candidates/driver.html
+++ b/child_pages/cc-elections/Candidates/driver.html
@@ -97,9 +97,9 @@
                 Candidate Driver has been a Commercial Township School Board member for the past 3 and a half years with other relevant credentials such as having kids in the 
                 school system, being an active parent and volunteer in the school system, years of teaching experience as a special education paraeducator, served on various school 
                 committees and sometimes being committee chair, and PTA secretary for a few years. Her main agenda items are to provide a safe environment for all school 
-                children and to provide transparency throughout the school system for the community. She has voted against the termination of staff members and voted yes for the 
-                sale of the PNS system. We are planning an interview with candidate Driver to help clarify some of the information she provided and to dive deeper into some of 
-                the mentioned issues. 
+                children and to provide transparency throughout the school system for the community. She voted to increase school bus driver pay and substitute pay, and voted yes 
+                for the sale of the PNS system. We are planning an interview with candidate Driver to help clarify some of the information she provided and to dive deeper into some 
+                of the mentioned issues. 
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
@@ -182,7 +182,7 @@
             <h4 class="sub-heading">Partial Voting record</h4>
             <div class="experience can-sec">
                 <ul>
-                    <li>Voted against termination of staff members</li>
+                    <li>Voted to increase bus driver pay and substitute pay</li>
                     <br>
                     <li>Voted yes to the sale of PNS</li>
                 </ul>
