quick corrections kim page

--- a/child_pages/cc-elections/Candidates/kim.html
+++ b/child_pages/cc-elections/Candidates/kim.html
@@ -187,7 +187,7 @@
             <div class="agenda-thesis can-sec">
                 
                 <ul>
-                    <h4>Healthcare<</h4>
+                    <h4>Healthcare</h4>
                     <li>Wants universal healthcare so every American has access to care they need at a cost they can afford.</li>
                     <li>Wants to lower prescription drug prices.</li>
                     <li>Wants to protect people with pre-existing conditions</li>
@@ -247,6 +247,7 @@
                     New Jersey families.</li>
                     <li>Cutting greenhouse gas emissions by 40% by 2030, making the United States well-positioned to meet our climate goals while also investing in our economy.<li>
                     <li>Saves families an average of $1,000 per year in energy costs and creates good paying jobs.</li>
+                    <br>
                     
                     <h4>Make Raising a Family More Affordable</h4>  
                     <li>The <a href="https://www.congress.gov/bill/117th-congress/house-bill/5376/text">Inflation Reduction Act</a>, which lowers healthcare costs, energy costs, 
