continuing to update kim, WIP

--- a/child_pages/cc-elections/Candidates/kim.html
+++ b/child_pages/cc-elections/Candidates/kim.html
@@ -129,9 +129,9 @@
                  <a href="https://www.andykim.com/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Campaign Site</button></a>
                  
                  <a href="https://www.facebook.com/AndyKimNJ" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook Campaign Site</button></a>
-                 
+                 <a href="https://kim.house.gov/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Official Government Site</button></a>
                  <a href="https://www.instagram.com/andykimnj/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Instagram</button></a>
-                 <a href="https://twitter.com/AndyKimNJ" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Instagram</button></a>
+                 <a href="https://twitter.com/AndyKimNJ" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Twitter/X</button></a>
 
                  <!-- <a href="https://www.facebook.com/robert.austino/" target="_blank"><i class="fa-brands fa-square-facebook" style="color: blue"></i></a> -->
              </div>
@@ -232,7 +232,7 @@
                     options for accessing loans</li>
                     <li>Helped over 10,000 small businesses in New Jersey access financial assistance during the pandemic</li>
                     <li>The <a href="https://www.congress.gov/bill/116th-congress/senate-bill/3548/text">CARES Act</a>, which provided checks to Americans, the PPP (paycheck 
-                    protection program), and emergency grants for small businesses</li>
+                    protection program), and emergency grants for small businesses. It also has a provision that helps eligible people pay health insurance preminums.</li>
                     <li>The <a href="https://www.congress.gov/bill/117th-congress/house-bill/1319/text">American Rescue Plan Act</a>, designed to help businesses and essential 
                     workers stay afloat during COVID</li>
                     <li>The <a href="https://www.congress.gov/bill/115th-congress/house-bill/5105#:~:text=This%20bill%20establishes%20the%20United,market%20economies%20in%20order%20to">BUILD act</a>,
@@ -254,6 +254,41 @@
                     and provides tax credits for energy efficient home improvements</li>
                     <li>The <a href="https://www.congress.gov/bill/117th-congress/senate-bill/2089">Keep Kids Fed Act</a>, which will provide $59 million dollars for New 
                     Jersey school and daycare meal programs</li>
+                    <li>The <a href="https://www.congress.gov/bill/117th-congress/house-bill/4346">CHIPS and Science Act</a>, which is designed to reduce dependance on foreign 
+                    chips manufacturing.</li>
+                    <br>
+
+                    <h4>Veterans Assistance</h4>
+                    <li>Delivered a new health clinic for veterans in Ocean County, NJ. 
+                    <a href="https://kim.house.gov/media/press-releases/congressman-kim-announces-new-60-million-va-community-based-outpatient-clinic-coming-to-ocean-county-va-secretary-denis-mcdonough-to-join-for-announcement">Press Release</a></li>
+                    <li>Voted for the <a href="https://www.congress.gov/bill/117th-congress/house-bill/3967">Honoring our PACT Act</a>, which is designed to expand veterans 
+                    healthcare and benefits.</li>
+                    <li>Voted to increase servicemember pay 
+                    <a href="https://kim.house.gov/media/press-releases/congressman-kim-votes-to-advance-bipartisan-national-defense-authorization-act-that-provides-historic-pay-raise-for-troops-secures-jobs-in-new-jersey-and-bolsters-us-global-strength">Press Release</a></li>
+                    <li>Voted to double investment for veterans suicide prevention. 
+                    <a href="https://kim.house.gov/media/press-releases/congressman-kim-votes-to-pass-legislative-package-that-will-improve-va-benefits-and-support-veterans">Press Release</a></li>
+                    <li>Pursued creating employment opportunities for veterans. 
+                    <a href="https://kim.house.gov/media/press-releases/congressman-kim-continues-military-employment-tour-with-small-business-listening-session">Press Release</a></li>
+                    <li>Pursued improved access to <a href="https://www.tricare.mil/">TRICARE</a>. 
+                    <a href="https://kim.house.gov/media/press-releases/congressman-kim-reintroduces-bipartisan-dental-care-for-our-troops-act">Press Release</a></li>
+                    <li>Pursued investing in childcare for military families 
+                    <a href="https://kim.house.gov/media/press-releases/congressman-kim-introduces-legislation-to-expand-servicemembers-access-to-affordable-childcare">Military Child Care Transparency and Expansion Act</a></li>
+                    <br>
+
+                    <h4>Reproductive Rights</h4>
+                    <li>Voted for the <a href="https://www.congress.gov/bill/117th-congress/house-bill/3755/text">Women's Health Protection Act</a></li>
+                    <li>Voted for the <a href="https://www.congress.gov/bill/118th-congress/house-bill/782">Ensuring Women’s Right to Reproductive Freedom Act</a></li>
+                    <li>Member of the <a href="https://houseprochoicecaucus-degette.house.gov/">Pro-Choice Caucus</a> in Congress.</li>
+                    <br>
+
+                    <h4>Ending Corruption in Government/Transparency and Accountability</h4>
+                    <li>Hosts monthly <a href="https://kim.house.gov/news/town-halls?token=7ZDr7V8d_QC3hCaveCj37fcwNzc8noY3bCHbgGq8YcQ&webform_id=town_hall_registration">Telephone Town Halls</a>
+                    <li>Posts <a href="https://kim.house.gov/news/daily-activities">Daily Activities</a></li>
+                    <li>Crafted Legislation against buying, selling, or owning individual stocks, serving on corporate boards, and lobbying once they leave office. 
+                    <a href="https://kim.house.gov/media/press-releases/congressman-kim-reintroduces-bill-to-ban-government-officials-from-owning-and-trading-stocks-setting-single-standard-across-government">Press Release</a></li>
+                    <li>Voted to end dark money in politics. <a href="https://kim.house.gov/media/press-releases/congressman-kim-votes-to-pass-bill-to-end-influence-of-dark-money-in-politics-strengthen-election-security-and-ethics-laws">Press Release</a></li>
+                    <li>Voted against congressional pay raises <a href="https://kim.house.gov/media/press-releases/fitzpatrick-kim-stop-proposed-pay-raise-members-congress">Press Release</a></li>
+
                 </ul>
             </div>
 
