kim updates, debate event added

--- a/child_pages/cc-elections/Candidates/kim.html
+++ b/child_pages/cc-elections/Candidates/kim.html
@@ -333,7 +333,33 @@
                     <li>Voted to end dark money in politics. <a href="https://kim.house.gov/media/press-releases/congressman-kim-votes-to-pass-bill-to-end-influence-of-dark-money-in-politics-strengthen-election-security-and-ethics-laws">Press Release</a></li>
                     <br>
                     <li>Voted against congressional pay raises <a href="https://kim.house.gov/media/press-releases/fitzpatrick-kim-stop-proposed-pay-raise-members-congress">Press Release</a></li>
+                    <br>
+                    <li>Pushed legislation to encourage more acts of service throughout the country. 
+                    <a href="https://kim.house.gov/media/press-releases/rep-kim-introduces-package-of-legislation-to-supercharge-national-service">Press Release</a></li>
+                    <br>
+                    <li>Pushed for improving voting rights <a href="https://kim.house.gov/media/press-releases/congressman-kim-calls-for-new-protections-during-town-hall-on-voting-rights">Press Release</a></li>
+                    <br>
+                    <br>
 
+                    <h4>LGBTQ+ Support</h4>
+                    <li>Cosponsered the 
+                    <a href="https://www.congress.gov/bill/117th-congress/house-bill/5">Equality Act</a><li>
+                    <br>
+                    <li>Stood up against transgender servicemember ban 
+                    <a href="https://kim.house.gov/media/press-releases/congressman-kim-votes-stand-against-discriminatory-ban-improved-military">Press Release</a><li>
+                    <br>
+                    <li>Cosponsored the <a href="https://www.congress.gov/bill/117th-congress/house-bill/3485">Global Respect Act</a><li>
+                    <br>
+                    <br>
+
+                    <h4>Gun Violence</h4>
+                    <li>Voted for the  
+                    <a href="https://www.congress.gov/bill/117th-congress/senate-bill/2938/text">Bipartisan Safer Communities Act</a><li>
+                    <br>
+                    <li>Cosponsored the  
+                    <a href="https://www.congress.gov/bill/118th-congress/house-bill/698">Assault Weapons Ban</a><li>
+                    <li>Cosponsored the  
+                    <a href="https://www.congress.gov/bill/117th-congress/house-bill/8">Bipartisan Background Checks Act</a><li>
                 </ul>
             </div>
 
