kim v bashaw debate added

--- a/child_pages/cc-elections/us_senate_2024.html
+++ b/child_pages/cc-elections/us_senate_2024.html
@@ -103,6 +103,13 @@
             several years. We are also aware of many independent and 3rd party candidates who may shake things up, including 
             Patricia Mooneyham, an independent whose message is about being a candidate of the working class rather than "a career politicain" (Kim) or someone 
             who was "born with a silver spoon in their mouth" (Bashaw) (quotes taken from a conversation at Deerfield Day). 
+
+            <div class="video-box-modal can-sec">
+                <h3 class="video-heading">Kim vs Bashaw Debate</h3>
+        
+                <iframe src="https://www.youtube.com/embed/AKHX3II6Wtw?si=IQkC6vdOuoomHsMI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>           
+            </div>     
+
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
           </p>
         </div>
