time filled in for mcquade interview in stances section

--- a/child_pages/cc-elections/Candidates/mcquade.html
+++ b/child_pages/cc-elections/Candidates/mcquade.html
@@ -220,7 +220,7 @@
                 
                 <p>The below interview comprehensively goes through current issues that incumbent Ranello and current Vice-Mayor Sooy brought up to us. That list 
                 of issues can be found <a href="../../../child_pages/cc-elections/millville_city_issues.html">here.</a>
-                McQuade addresses them in his own words starting at about ____, and we have a bullet point summary of that below the video.</p>
+                McQuade addresses them in his own words starting at about 16:00, and we have a bullet point summary of that below the video.</p>
 
                 <div class="video-box-modal can-sec">
                     <h3 class="video-heading">Inform The Vote Interview</h3>
