slight rewording on city salary issue on mcquade page

--- a/child_pages/cc-elections/Candidates/mcquade.html
+++ b/child_pages/cc-elections/Candidates/mcquade.html
@@ -246,7 +246,7 @@
                     Van Drew to see why it is moving slowly.</li>
                     <br>
                     <br>
-                    <li>City Salary Competitiveness - The city only has so much money to work with in it's budget, so bringing crime stats and low salaries to 
+                    <li>City Salary Competitiveness - The city only has so much money to work with in it's budget, so bringing the issues of crime stats and low salaries to 
                     Trenton could help make the state more aware of the city's struggles, and thereby get the state to send more money to the city.</li>
                     <br>
                     <br>
