--- a/child_pages/cc-elections/Candidates/darminio.html
+++ b/child_pages/cc-elections/Candidates/darminio.html
@@ -94,13 +94,12 @@
               <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">Maria Darminio</h6>
               <p>
-                As of right now, 9/8/2024, we are waiting for candidate Darminio to follow up on our inquiries. We have come across a little bit about her proposed agenda 
-                through campaign literature, which states she will pursue safe streets, clean communities, and modern infrastructure.
-                <details>
-                    <summary style="cursor:pointer; color:blue; text-decoration:underline;">Campaign Literature</summary>
-                            <p>If on desktop, right click the image and select 'open in new tab' for a larger image</p>
-                            <img src="../../../assets/screenshots/darminioLit.PNG" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
-                </details>
+                Candidate Darminio has an agenda that is primarily focused on economic development and safe streets. She feels that by increasing revenue for the city through means 
+                such as permitting the sale of retail cannabis, making sure the Nabb Ave extension is completed, and improving the education of the workforce, many of the city's 
+                issues will be addressed. More development would mean more jobs in the city. More jobs means more money is spent downtown, which would also increase revenue. With more 
+                revenue the city can pay city employees, including police, competitive wages. She also wants to help clean up the streets, both in terms crime and homelessness. She knows
+                that some of those problems are state-level issues, so she plans on working with state legislators to solve problems like dangerous off-road vehicles and motorcycles.
+                
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
