--- a/child_pages/cc-elections/Candidates/darminio.html
+++ b/child_pages/cc-elections/Candidates/darminio.html
@@ -162,7 +162,7 @@
             <div class="agenda-thesis can-sec">
                 <ul>
 
-                        <li>Economic Development - Wants to continue to pursue economic development in the city because it helps raise tax revenue, creates jobs so people have more 
+                        <li><b>Economic Development</b> - Wants to continue to pursue economic development in the city because it helps raise tax revenue, creates jobs so people have more 
                           money to spend, and when that money is spent in downtown it will continue to increase revenue. The increased revenue will also allow for the city to pay 
                           competitive wages for city employees, which will both attract and retain high quality employees. One suggestion to raise revenue is to allow the sale of retail 
                           cannabis, which is thoroughly detailed below. Another is to help make sure the Nabb Ave extension, a project aimed at making more efficient routes from Route 55 
@@ -191,8 +191,9 @@
                                 workforce. Fortunately at the college level we have several colleges located nearby, including Rowan, Stockton and Rutgers to draw from.
                             </details>
                       <li>
-
-                    <li>Safe Streets - Wants to make sure laws change at the state level in a way which would enable police officers to more effectively fight crime. Also wants to 
+                      <br>
+                      <br>
+                    <li><b>Safe Streets</b> - Wants to make sure laws change at the state level in a way which would enable police officers to more effectively fight crime. Also wants to 
                     help clean up the streets by helping out the homeless people that are already here while making sure not to attract more.
                     <details>
                             <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Full Statement</summary>
@@ -212,6 +213,8 @@
                             </details>
                     </li>
                 </ul>
+                <br>
+                <br>
                 <details>
                     <summary style="cursor:pointer; color:blue; text-decoration:underline;">Campaign Literature</summary>
                             <p>If on desktop, right click the image and select 'open in new tab' for a larger image</p>
@@ -226,7 +229,7 @@
             <div class="experience can-sec">
                 <ul>
                       
-                      <li>Issue Clarity and Engagement - Wants to ensure true, thorough transparency with the public. She also encourages the public to stay engaged year-round, 
+                      <li><b>Issue Clarity and Engagement</b> - Wants to ensure true, thorough transparency with the public. She also encourages the public to stay engaged year-round, 
                       not just at election time. 
                       <details>
                         <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Full Statemment</summary>
@@ -239,7 +242,9 @@
                            is not the absence of fear.” 
                         </details>
                       </li>
-                      <li>Cannabis Revenue - Wants to permit the sale of retail cannabis, as this would open new businesses in the city and generate tax revenue in the city. This would be 
+                      <br>
+                      <br>
+                      <li><b>Cannabis Revenue</b> - Wants to permit the sale of retail cannabis, as this would open new businesses in the city and generate tax revenue in the city. This would be 
                       in addition to the grow facility that is already present.
                       <details>
                         <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Full Response</summary>
