formatting fixes shane page

--- a/child_pages/cc-elections/Candidates/harris_shane.html
+++ b/child_pages/cc-elections/Candidates/harris_shane.html
@@ -163,21 +163,23 @@
                 <br>
                 As stated in my background information I am fully qualified to work with Security Issues.
                 Bringing my past experience to the table would allow me to bring a unique perspective to
-                the Board.
+                the Board:
                 <br>
                 <ul>
-                    <li>Obviously in this day and age security is of the utmost importance. At the school
+                    <li>1. Obviously in this day and age security is of the utmost importance. At the school
                         level we need to implement plans that allow our children to feel safe in their
-                        environment. A student’s primary focus should be on learning.
+                        environment. A student's primary focus should be on learning.
                     <li>
-                    <li>In order to sustain a safe environment policies need to be looked at, evaluated,
+                    <br>
+                    <li>2. In order to sustain a safe environment policies need to be looked at, evaluated,
                         and updated yearly. This should be done as a collaboration with school and
                         district personnel. School personnel so they can give input as to what works
                         well in their individual building and what changes they feel are necessary. And
                         appropriate district personnel who would have been attending seminars with
                         agencies that have been involved in crisis situations.
                     </li>
-                    <li>The Board Representative(s) should also have a panel meeting at least quarterly
+                    <br>
+                    <li>3. The Board Representative(s) should also have a panel meeting at least quarterly
                         with school personnel, District Security personnel and City Stakeholders
                         concerning security.
                     </li>
@@ -193,7 +195,7 @@
                 <br>
                 <br>
                 <ul>
-                      <li><b>Disciplinary Methods<b>
+                      <li><b>Disciplinary Methods</b>
                         <br>
                         <ul>
                             <li>If there were too many incidents within the normal day at specific schools those
@@ -213,7 +215,7 @@
                       <li>
                       <br>
                       <br>
-                      <li><b>Parents Rights vs. Students Privacy<b>
+                      <li><b>Parents Rights vs. Students Privacy</b>
                           <br>
                           I believe in parents rights but I also believe in following the law. With my background of
                           thirty years of law enforcement my initial reaction to any issue would be to follow the law.
@@ -259,16 +261,19 @@
                     <br>
                     <br>
                     <li>30 Years Vineland Police Officer Retired January 2024
+                    <br>
                         <ul>
                             <li>6 years as the Sgt. of Vineland Police Juvenile Unit: This is a position
                                 that is the liaison between the school board and the police department.
                                 Oversaw the Police Explorers program and the Safety Patrols which gave
                                 me direct interaction with students at all educational levels.
                             </li>
+                            <br>
                             <li>I Worked closely with several school staff, I made myself available to
                                 Administrators, Guidance and Teachers. I collaborated with staff and
                                 students in an effort to create and implement plans to assist students.
                             </li>
+                            <br>
                             <li>I also worked closely with the Former District Security Supervisor and
                                 Central Administration in the development and implementation of security
                                 protocols within the school district.
